# ataraxis-automation

./: CLAUDE.md  README.md  pyproject.toml  tox.ini
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/api-docs/: SKILL.md
.claude/skills/api-docs/references/: conf-py-templates.md
.claude/skills/commit/: SKILL.md
.claude/skills/cpp-style/: SKILL.md
.claude/skills/cpp-style/references/: anti-patterns.md  doxygen-and-types.md  libraries-and-tools.md
.claude/skills/csharp-style/: SKILL.md
.claude/skills/csharp-style/references/: anti-patterns.md  class-patterns.md  libraries-and-tools.md
.claude/skills/explore-codebase/: SKILL.md
.claude/skills/project-layout/: SKILL.md
.claude/skills/pyproject-style/: SKILL.md
.claude/skills/python-style/: SKILL.md
.claude/skills/python-style/references/: class-patterns.md  libraries-and-tools.md
.claude/skills/readme-style/: SKILL.md
.claude/skills/readme-style/references/: section-templates.md
.claude/skills/skill-design/: SKILL.md
.claude/skills/skill-design/references/: anti-patterns.md  frontmatter-reference.md  progressive-disclosure.md
.claude/skills/sun-lab-style/: README_STYLE.md  SKILL.md
.claude/skills/tox-config/references/: environment-templates.md
docs/source/: conf.py  welcome.rst
envs/: axa_dev_lin.yml  axa_dev_lin_spec.txt  axa_dev_osx.yml  axa_dev_osx_spec.txt  axa_dev_win.yml  axa_dev_win_spec.txt  template_pure_lin64.yml  template_pure_lin64_spec.txt  template_pure_osx.yml  template_pure_osx_spec.txt  template_pure_win64.yml  template_pure_win64_spec.txt
plugins/automation/.claude-plugin/: plugin.json
plugins/automation/skills/api-docs/: SKILL.md
plugins/automation/skills/api-docs/references/: conf-py-templates.md  doxygen-reference.md  rst-templates.md
plugins/automation/skills/commit/: SKILL.md
plugins/automation/skills/cpp-style/references/: class-patterns.md  libraries-and-tools.md
plugins/automation/skills/csharp-style/assets/: .csharpierignore
plugins/automation/skills/csharp-style/references/: xml-docs-and-types.md
plugins/automation/skills/project-layout/: SKILL.md
plugins/automation/skills/project-layout/references/: archetype-trees.md
plugins/automation/skills/pyproject-style/references/: project-metadata.md  tool-configurations.md
plugins/automation/skills/python-style/: SKILL.md
plugins/automation/skills/python-style/references/: anti-patterns.md  docstrings-and-types.md  libraries-and-tools.md
plugins/automation/skills/readme-style/: SKILL.md
plugins/automation/skills/readme-style/references/: section-templates.md
plugins/automation/skills/skill-design/references/: claude-md-reference.md  frontmatter-reference.md
plugins/automation/skills/tox-config/: SKILL.md
plugins/automation/skills/tox-config/references/: environment-templates.md
skills/commit/: SKILL.md
skills/skill-design/: SKILL.md
src/YOUR_LIBRARY_NAME/: utilities.py
src/ataraxis_automation/: __init__.py  __init__.pyi  automation.py  automation.pyi  cli.py  cli.pyi
tests/: automation_test.py  utilities_test.py
